# ARC-AudioBench

./: BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
config/: default_thresholds.json
data/: integration_targets.json  seo_keywords.json
docs/: ARC_GOVERNANCE_MODEL.md  COMPETITIVE_POSITIONING.md  DAW_SMOKE_TEST_MATRIX.md  DSP_TEST_DESIGN.md  ECOSYSTEM_REPO_REFERENCES.md  FREEEQ8_BENCHMARK_SUITE.md  FREEEQ8_INTEGRATION.md  FREEVOX8_BENCHMARK_SUITE.md  FREEVOX8_INTEGRATION.md  PLUGINVAL_AND_DAW_PIPELINE.md  PRODUCT_POSITIONING.md  PUBLIC_LAUNCH_PLAN.md  RELEASE_CHECKLIST.md  RESEARCH_CITATION_LAYER.md  SEO_KEYWORD_MAP.md  SOURCE_AUDIT.md  VOXEL_AUDIO_INTEGRATION.md
examples/: freeeq8_result_example.json  freevox8_result_example.json
integrations/: arc_core.md  arc_neuron.md  arc_rar.md  freeeq8.md  freevox8.md  omnibinary.md  voxel_audio.md
release_evidence/: ARC_AUDIOBENCH_RELEASE_MANIFEST.json  source_audit_summary.json  source_inventory.json
reports/: index.html  summary.md
results/: sine_1000hz.analysis.json
results/batch/: batch_manifest.json  impulse.analysis.json  log_sweep_20_20000hz.analysis.json  silence.analysis.json  sine_10000hz.analysis.json  sine_1000hz.analysis.json  sine_100hz.analysis.json
schemas/: audio_bench_result.schema.json
scripts/: analyze_wav.py  arc_audiobench.py  batch_analyze.py  compare_outputs.py  generate_test_tones.py  make_evidence_pack.py  pluginval_wrapper.py  report_results.py  validate_repo.py  validate_results.py
